# Parallel_NaiveBayes

./: README.md  job.error  job.output  job.slurm
output/: classification-summary.txt  network.txt
src/: CMakeCache.txt  Makefile  NaiveBayes360  cmake_install.cmake  main.cpp
src_mpi/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  NaiveBayes360  cmake_install.cmake  main.cpp
src_omp/: CMakeCache.txt  CMakeCache.txt~  CMakeLists.txt  CMakeLists.txt~  Makefile  NaiveBayes360  cmake_install.cmake  main.cpp
src_pthread/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  NaiveBayes360  cmake_install.cmake  main.cpp
